Navigation alignmentt fix in tablet

--- a/JXTNext.Sitefinity.Widgets.Common/ResourcePackages/Winston/assets/src/project/components/_media.scss
+++ b/JXTNext.Sitefinity.Widgets.Common/ResourcePackages/Winston/assets/src/project/components/_media.scss
@@ -1,13 +1,7 @@
 /*#region Tablet*/
 @media (min-width:768px) {
 
-    header .main-nav .nav.navbar-nav{
-        margin-left:0;
-        width:calc(100% + 60px)
-    }
-    header .navbar.navbar-default .navbar-nav > li > a {
-        font-size: 12px !important;
-    }
+  
     header {
 
         .brand-logo {
@@ -1940,3 +1934,14 @@
 
 
 
+
+@media(max-width:768px){
+    header .main-nav .nav.navbar-nav {
+        margin-left: 0;
+        width: calc(100% + 60px)
+    }
+
+    header .navbar.navbar-default .navbar-nav > li > a {
+        font-size: 13px !important;
+    }
+}
